syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "shoppingcart_domain.proto";
import "google/protobuf/any.proto";

package example.product;

message Product {
    string id = 1;
    string name = 2;
}


message ByNameRequest {
  string product_name = 1;
}

message ByIdRequest {
  string product_id = 1;
}

service ProductsView {
  rpc ShoppingCartItemAdded(example.shoppingcart.domain.ItemAdded) returns (Product) { 
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "cart" 
    };
    option (akkaserverless.method).view.update = {
      table: "products"
      transform_updates: true 
    };
  }

  rpc GetProduct(ByNameRequest) returns (Product) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * FROM products WHERE name = :product_name"
    };
  }
}